--- a/index.html
+++ b/index.html
@@ -33,6 +33,81 @@
         <!-- /.button-group -->
     </header>
     <!-- /.header -->
+    <div class="film">
+        <div class="container">
+            <div class="film-wrapper">
+                <div class="film-trailer">
+                    <img src="img/poster.jpg" alt="Poster" class="poster">
+                    <button class="trailer-button">
+                        <img class="trailer-button-icon" src="img/play.svg"
+                            alt="Play">
+                        <span class="trailer-button-text">Посмотреть
+                            трейлер</span>
+                    </button>
+                </div>
+                <!-- /.film-trailer -->
+                <div class="film-text">
+                    <h1 class="film-title">Охотники за привидениями:
+                        <br>Наследники
+                    </h1>
+                    <span class="film-subtitle">Ghostbusters: Afterlife</span>
+                    <p class="film-description">Мать-одиночка с двумя
+                        детьми-подростками селится на
+                        старой ферме &nbsp;в Оклахоме, полученной в наследство
+                        от
+                        отца, которого она не
+                        знала. Дети пытаются больше узнать о своем деде и
+                        находят автомобиль
+                        Ecto-1, принадлежавший знаменитым охотникам за
+                        привидениями.</p>
+                    <div class="about-film">
+                        <div class="left-side">
+                            <span class="about-text">
+                                <strong
+                                    class="about-text-bold">Режиссер</strong>
+                                <span class="about-text-reg">Джейсон
+                                    Райтман</span>
+                            </span>
+                            <span class="about-text">
+                                <strong
+                                    class="about-text-bold">Сценарий</strong>
+                                <span class="about-text-reg">Дэн Эйкройд</span>
+                            </span>
+                            <span class="about-text">
+                                <strong
+                                    class="about-text-bold">Премьера</strong>
+                                <span class="about-text-reg">09.07.2020
+                                    (РФ)</span>
+                            </span>
+                        </div>
+                        <!-- /.left-side -->
+                        <div class="right-side">
+                            <span class="about-text">
+                                <strong class="about-text-bold">Бюджет</strong>
+                                <span class="about-text-reg">
+                                    75 000 000 $</span>
+                            </span>
+                            <span class="about-text">
+                                <strong
+                                    class="about-text-bold">Кинопрокат</strong>
+                                <span class="about-text-reg">SPPR</span>
+                            </span>
+                            <span class="about-text">
+                                <strong class="about-text-bold">Сборы</strong>
+                                <span class="about-text-reg">204 334 455
+                                    $ (Мир)</span>
+                            </span>
+                        </div>
+                        <!-- /.right-side -->
+                    </div>
+                </div>
+                <!-- /.film-text -->
+            </div>
+            <!-- film-wrapper -->
+        </div>
+        <!-- container -->
+    </div>
+    <!-- /.film -->
     <script src="js/script.js"></script>
 </body>
 </html>
