create: rating & tabs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <!-- /.button-group -->
     </header>
     <!-- /.header -->
-    <div class="film">
+    <section class="film">
         <div class="container">
             <div class="film-wrapper">
                 <div class="film-trailer">
@@ -100,14 +100,133 @@
                         </div>
                         <!-- /.right-side -->
                     </div>
+                    <!-- about-film -->
+                    <div class="rating">
+                        <div class="film-rating-counter">92%</div>
+                        <!-- /.rating-counter -->
+                        <div class="rating-description">
+                            <h3 class="rating-title">Рейтинг зрителей
+                            </h3>
+                            <span class="rating-text">Средняя оценка:
+                                <strong
+                                    class="rating-text-bold">4,5/5</strong></span>
+                            <span class="rating-text">Всего голосов: <strong
+                                    class="rating-text-bold4
+350">4
+                                    350</strong></span>
+                        </div>
+                        <!-- /.rating-description -->
+                    </div>
+                    <!-- /.rating -->
                 </div>
-                <!-- /.film-text -->
+                <!-- /.text -->
             </div>
             <!-- film-wrapper -->
         </div>
         <!-- container -->
-    </div>
+    </section>
     <!-- /.film -->
+    <section class="cast">
+        <div class="container">
+            <div class="tabs">
+                <h2 class="section-title active">Актеры</h2>
+                <h2 class="section-title">Создатели</h2>
+            </div>
+            <!-- /.tabs -->
+            <div class="tabs-content">
+                <div class="card">
+                    <img src="img/actors/1.png" alt="Кэрри Кун"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Кэрри Кун</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Carrie Coon</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="img/actors/2.png" alt="Билл Мюррей"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Билл Мюррей</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Bill Murray</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="img/actors/3.png" alt="Пол Радд"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Пол Радд</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Paul Rudd</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="img/actors/4.png" alt="Энни Поттс"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Энни Поттс</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Annie Potts</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="img/actors/5.png" alt="МакКенна Грейс"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">МакКенна Грейс</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Mckenna Grace</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="img/actors/6.png" alt="Дэн Эйкройд"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Дэн Эйкройд</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Dan Aykroyd</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="img/actors/7.png" alt="Эрни Хадсон"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Эрни Хадсон</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Ernie Hudson</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="img/actors/8.png" alt="Финн Вулфард"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Финн Вулфард</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Finn Wolfhard</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.tabs-content -->
+        </div>
+        <!-- /.container -->
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
