--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="header">
         <img src="img/logo.png" alt="Logo: film" class="logo">
         <!-- /.logo -->
-        <div class="line"></div>
+        <div class="header-logo"></div>
         <!-- /.line -->
         <input type="text" class="search-input"
             placeholder="Поиск по фильмам...">
@@ -31,6 +31,16 @@
             <button class="button login">Войти</button>
         </div>
         <!-- /.button-group -->
+        <div class="mobile-buttons">
+            <button class="search-button"><img src="img/search-icon.svg"
+                    alt="Search icon"></button>
+            <button class="m-menu-button">
+                <span class="menu-line"></span>
+                <span class="menu-line"></span>
+                <span class="menu-line"></span>
+            </button>
+        </div>
+        <!-- /.mobile-buttons -->
     </header>
     <!-- /.header -->
     <section class="film">
