--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -247,39 +248,68 @@
     <section class="news">
         <div class="container">
             <h2 class="section-title section-news-title">Новости по теме</h2>
-            <div class="news-cards">
-                <div class="news-card">
-                    <span class="news-date">31 марта 2020</span>
-                    <h3 class="news-title">«Морбиуса» и «Охотников за
-                        привидениями» перенесли на
-                        следующий год</h3>
+            <!-- Slider main container -->
+            <div class="swiper-container">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="news-card">
+                            <span class="news-date">31 марта 2020</span>
+                            <h3 class="news-title">«Морбиуса» и «Охотников за
+                                привидениями» перенесли на
+                                следующий год</h3>
+                        </div>
+                        <!-- news-card -->
+                    </div>
+                    <!-- swiper-slide -->
+                    <div class="swiper-slide">
+                        <div class="news-card">
+                            <span class="news-date">9 декабря 2019</span>
+                            <h3 class="news-title">Наследники: Вышел дебютный
+                                трейлер
+                                новых «Охотников за
+                                привидениями»</h3>
+                        </div>
+                        <!-- news-card -->
+                    </div>
+                    <!-- swiper-slide -->
+                    <div class="swiper-slide">
+                        <div class="news-card">
+                            <span class="news-date">11 ноября 2019</span>
+                            <h3 class="news-title">Новые «Охотники за
+                                привидениями»
+                                обзавелись названием
+                            </h3>
+                        </div>
+                        <!-- news-card -->
+                    </div>
+                    <!-- swiper-slide -->
+                    <div class="swiper-slide">
+                        <div class="news-card">
+                            <span class="news-date">19 октября 2019</span>
+                            <h3 class="news-title">Завершились съёмки новых
+                                «Охотников
+                                за привидениями»
+                            </h3>
+                        </div>
+                        <!-- news-card -->
+                    </div>
+                    <!-- swiper-slide -->
                 </div>
-                <div class="news-card">
-                    <span class="news-date">9 декабря 2019</span>
-                    <h3 class="news-title">Наследники: Вышел дебютный трейлер
-                        новых «Охотников за
-                        привидениями»</h3>
-                </div>
-                <div class="news-card">
-                    <span class="news-date">11 ноября 2019</span>
-                    <h3 class="news-title">Новые «Охотники за привидениями»
-                        обзавелись названием
-                    </h3>
-                </div>
-                <div class="news-card">
-                    <span class="news-date">19 октября 2019</span>
-                    <h3 class="news-title">Завершились съёмки новых «Охотников
-                        за привидениями»
-                    </h3>
-                </div>
+                <!-- swiper-wrapper -->
+                <button class="button-next">
+                    <img src="img/arrow.svg" alt="arrow">
+                </button>
             </div>
-            <!-- /.news-cards -->
+            <!-- swiper-container -->
         </div>
         <!-- /.container -->
     </section>
     <!-- /.news -->
     <script src="js/jquery-3.7.0.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/swiper.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
