create: creators & tabs

--- a/index.html
+++ b/index.html
@@ -146,11 +146,14 @@
     <section class="cast">
         <div class="container">
             <div class="tabs">
-                <h2 class="section-title active">Актеры</h2>
-                <h2 class="section-title">Создатели</h2>
+                <h2 class="tab section-title active" data-target="#actors">
+                    Актеры
+                </h2>
+                <h2 class="tab section-title" data-target="#creators">Создатели
+                </h2>
             </div>
             <!-- /.tabs -->
-            <div class="tabs-content">
+            <div class="tabs-content visible" id="actors">
                 <div class="card">
                     <img src="img/actors/1.png" alt="Кэрри Кун"
                         class="card-image">
@@ -235,6 +238,31 @@
                         <h3 class="name">Финн Вулфард</h3>
                         <!-- /.name -->
                         <span class="en-name">Finn Wolfhard</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.tabs-content -->
+            <div class="tabs-content" id="creators">
+                <div class="card">
+                    <img src="img/creators/creator-1.jpg" alt="Джейсон Райтман"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Джейсон Райтман</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Jason Reitman</span>
+                        <!-- /.en-name -->
+                    </div>
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="img/creators/creator-2.jpg" alt="Гил Кинан"
+                        class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Гил Кинан</h3>
+                        <!-- /.name -->
+                        <span class="en-name">Gil Kenan</span>
                         <!-- /.en-name -->
                     </div>
                 </div>
